--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-   "name": "สล๊อต pgslot ทดลองเล่นสล็อต",
+   "name": "pg9",
    "theme": "syntax",
    "version": "0.0.0",
    "description": "สล็อต tcas65 pg",
